syntax = "proto3";

option csharp_namespace = "BasketGrpc.Protos";

package BasketApi;

service Basket{
	rpc UpdateBasket(UpdateBasketRequest) returns (CustomerBasketResponse){}
	rpc GetBasket(GetBasketRequest) returns (CustomerBasketResponse){}
	rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse){}

}

message UpdateBasketRequest{
	repeated BasketItem items = 1;
}

message BasketItem{
	int32 product_id = 1;
	int32 quantity = 2;
}

message CustomerBasketResponse{
	repeated BasketItem items = 1;
}

message GetBasketRequest{

}

message DeleteBasketRequest{

}

message DeleteBasketResponse{

}
